Add projects /api/0.1 end point
